# CDA_Automata

./: .bench.stdout  .gitattributes  .gitignore  .gitmodules  .stdout  00-complete-bench.sh  01-compile-array-fsa.sh  02-build-dicts.sh  02-make-plain-fsa.sh  03-bench-dicts.sh  03-build-fsa-dicts.sh  04-bench-fsa-dicts.sh  04-show-benchmarks.sh  05-show-benchmark.sh  13-build-array.sh  Accessory.hpp  ArrayDACFSA.hpp  ArrayDACFSABuilder.cpp  ArrayDACFSABuilder.hpp  ArrayDACFSARank.hpp  ArrayFSA.hpp  ArrayFSABuilder.cpp  ArrayFSABuilder.hpp  ArrayFSATail.hpp  ArrayFSATailBuilder.cpp  ArrayFSATailBuilder.hpp  ArrayFSATailDAC.hpp  ArrayFSATailDACBuilder.cpp  ArrayFSATailDACBuilder.hpp  ArrayFSATailSimple.hpp  ArrayTri.hpp  BitVector.hpp  ByteData.hpp  CMakeCache.txt  CMakeLists.txt  Calc.hpp  CheckAccessory.hpp  CodeArray.hpp  CodesMeasurer.hpp  DACs.hpp  (+46 more)
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
Release/: bench  build
array-fsa/: .gitignore  ArrayFSA.hpp  ArrayFSABuilder.cpp  ArrayFSABuilder.hpp  ArrayFSATailBuilder.cpp  ArrayFSATailBuilder.hpp  BitVector.hpp  ByteData.hpp  CMakeLists.txt  Calc.hpp  CodesMeasurer.hpp  DACs.hpp  Exception.hpp  FSA.cpp  FSA.hpp  FitValuesArray.hpp  FsaGenerator.hpp  FsaTools.hpp  Log.hpp  Makefile  MorfologikCFSA2.hpp  MultiBitVector.hpp  NextCheck.hpp  PlainFSA.hpp  PlainFSABuilder.cpp  SACs.hpp  StringArray.hpp  StringDictBuilder.cpp  StringTransFSA.hpp  Vector.hpp  basic.hpp  bench.cpp  build.cpp  build_array.cpp  codes.cpp  makefsa.cpp  test_PlainFSA.cpp
array-fsa/array_fsa.xcodeproj/: project.pbxproj
array-fsa/include/: array_fsa.cpp  array_fsa.hpp
array-fsa/include/array_fsa/: ArrayFSA.hpp  ArrayFSABuilder.hpp  ArrayFSATailBuilder.hpp  DoubleArrayFSA.hpp  Exception.hpp  FSA.hpp  FitValuesArray.hpp  MorfologikCFSA2.hpp  MorfologikFSA5.hpp  MultipleVector.hpp  NextCheck.hpp  PlainFSA.hpp  PlainFSABuilder.hpp  StringArray.hpp  StringArrayBuilder.hpp  StringDictBuilder.hpp  StringTransFSA.hpp
array-fsa/src/: ArrayFSABuilder.cpp  ArrayFSATailBuilder.cpp  FSA.cpp  PlainFSABuilder.cpp  StringDictBuilder.cpp  StringTransFSA.cpp
array-fsa/test/: MultipleVector_test.cpp  NextCheck_test.cpp
array_fsa.build/Debug/ALL_BUILD.build/: Script-BE6435984ACE4E99B5A30476.sh  dgph
array_fsa.build/Debug/ZERO_CHECK.build/: Script-C047531417F44F8A91612416.sh  dgph
array_fsa.build/Debug/bench.build/: dgph
array_fsa.build/Debug/bench.build/Objects-normal/x86_64/: bench.LinkFileList
array_fsa.build/Debug/build.build/: dgph
array_fsa.build/Debug/build.build/Objects-normal/x86_64/: build.LinkFileList
array_fsa.build/Debug/test_PlainFSA.build/: dgph
array_fsa.xcodeproj/: project.pbxproj
array_fsa.xcodeproj/xcuserdata/takumamatsumoto.xcuserdatad/xcschemes/: xcschememanagement.plist
array_fsa_test/: main.cpp
daram/: CMakeLists.txt
daram/include/: csd_automata.cpp  csd_automata.hpp
daram/include/csd_automata/: Cdawg.hpp  CdawgBuilder.hpp  CommonPrefixSet.hpp  Dawg.hpp  DawgBuilder.hpp  Director.hpp  DoubleArrayImpl.hpp  DoubleArrayImpr.hpp  IOInterface.hpp  MorfologikCFSA2DictionaryFoundation.hpp  MorfologikFSA5DictionaryFoundation.hpp  PlainFSA.hpp  PlainFSABuilder.hpp  SerializedStrings.hpp  TailDict.hpp  TailDictBuilder.hpp  basic.hpp  fsa_util.hpp  util.hpp
daram/lib/SimpleDataStructure/include/sim_ds/string_util/: Samc.hpp
daram/test/: CMakeLists.txt  DoubleArrayImpl_test.cpp  DoubleArrayImpr_test.cpp  PlainFSA_test.cpp  ValueSet_test.cpp
daram/tools/: convert.cpp  daram_benchmark.cpp  daram_build.cpp
data-sets/: README.md  create-test-datasets.py
experiments/: CMakeLists.txt
experiments/include/: CentroidWrapper.hpp  SamcWrapper.hpp
experiments/src/: darts_build.cpp  experiment.cpp  samc_build.cpp  samc_build.hpp
include/: CentroidWrapper.hpp  DartsCloneWrapper.hpp  MarisaWrapper.hpp  XcdatWrapper.hpp
project/: Benchmark+Wrapper.hpp  CMakeLists.txt  DABuilder.hpp  DartsCloneWrapper.cpp  DartsCloneWrapper.hpp  FsaGenerator.hpp  FsaTools.hpp  MarisaWrapper.hpp  XcdatWrapper.hpp  bench.cpp  build.cpp  build_array.cpp  convert.cpp  dam_bench.cpp  dam_build.cpp  daram_benchmark.cpp  daram_build.cpp  darts_build.cpp  experiment.cpp  makefsa.cpp  test_PlainFSA.cpp
project/include/: array_fsa.hpp  csd_automata.hpp
project/include/array_fsa/: ArrayFSABuilder.hpp  ArrayFSATailBuilder.hpp  ByteData.hpp  DAFoundation.hpp  DoubleArrayCFSA.hpp  DoubleArrayFSA.hpp  MorfologikCFSA2.hpp  MorfologikCFSA2DictionaryFoundation.hpp  MorfologikFSA5.hpp  MorfologikFSA5Dictionary.hpp  MorfologikFSA5DictionaryFoundation.hpp  MorfologikFSADictionary.hpp  MultipleVector.hpp  PlainFSA.hpp  PlainFSABuilder.hpp  StringDict.hpp
project/include/csd_automata/: ArrayFSABuilder.hpp  ArrayFSATailBuilder.hpp  Benchmark.hpp  ByteData.hpp  Cdawg.hpp  CdawgBuilder.hpp  CommonPrefixSet.hpp  DAFoundation.hpp  Dawg.hpp  Director.hpp  DoubleArrayCFSA.hpp  DoubleArrayCFSABuilder.hpp  DoubleArrayFSA.hpp  DoubleArrayFSABuilder.hpp  DoubleArrayImpr.hpp  Exception.hpp  Extension.hpp  FsaTools.hpp  IOInterface.hpp  MorfologikCFSA2.hpp  MorfologikCFSA2DictionaryFoundation.hpp  MorfologikFSA5.hpp  MorfologikFSA5DictionaryFoundation.hpp  MorfologikFSADictionary.hpp  MorfologikFsaDictionary.hpp  MultipleVector.hpp  PlainFSA.hpp  PlainFSABuilder.hpp  SerializedStrings.hpp  SerializedStringsBuilder.hpp  StrDictData.hpp  StringArray.hpp  StringArrayBuilder.hpp  StringDict.hpp  StringDictBuilder.hpp  StringDictionaryInterface.hpp  TailDict.hpp  TailDictBuilder.hpp  TailDictContainer.hpp  ValueSet.hpp  (+3 more)
project/test/: .CMakeLists.txt.swp  CMakeLists.txt  CommomPrefixSet_test.cpp  DAFoundation_test.cpp  DoubleArrayImpr_test.cpp  MultipleVector_test.cpp  NextCheck_test.cpp  PlainFSA_test.cpp  ValueSet_test.cpp
project/tools/: CMakeLists.txt  convert.cpp  daram_benchmark.cpp  daram_build.cpp
software/path_decomposed_tries/: tries_perftest
software/xcdat/: xcdat
src/: experiment.cpp
(+1 files in other folders)
